--- a/.travis.yml
+++ b/.travis.yml
@@ -45,6 +45,6 @@ branches:
     - master
 env:
   global:
-    - GH_REF: git@github.com:akun2014/akun2014.github.io.git                           # 设置 github 项目仓库地址
+    - GH_REF: github.com/akun2014/akun2014.github.io.git                   # 设置 github 项目仓库地址
     - GH_username: akun2014                                               # 设置 github 用户名           
     - GH_useremail: e-gk@qq.com                                            # 设置 github 绑定邮箱地址
