--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "eslint": "^6.2.2",
     "hexo": "^3.9.0",
+    "hexo-abbrlink": "^2.0.5",
     "hexo-deployer-git": "^1.0.0",
     "hexo-generator-archive": "^0.1.5",
     "hexo-generator-category": "^0.1.3",
