公告栏地址修复

--- a/themes/hexo-theme-snippet/_config.yml
+++ b/themes/hexo-theme-snippet/_config.yml
@@ -65,7 +65,7 @@ jsonContent:
 ## 网站公告设置
 notification: |-
             <p>
-               <a href="https://www.coolkaka.cn/2019/08/12/Home/">菜鸟的成神之路</a>
+               <a href="https://www.coolkaka.cn/posts/d1e4a3ee.html">菜鸟的成神之路</a>
             </p>
 
 ## 社交设置
