--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "hexo-generator-sitemap": "^1.2.0",
     "hexo-generator-tag": "^0.2.0",
     "hexo-pdf": "^1.1.1",
+    "hexo-pwa": "^0.1.3",
     "hexo-renderer-ejs": "^0.3.1",
     "hexo-renderer-less": "^1.0.0",
     "hexo-renderer-marked": "^2.0.0",
